# vrcwatch.rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  pyproject.toml  viz_jitter.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_test.yml  changelog.yml  prepare_release.yml  release.yml  review.yml
ci/: bumper.py  bumper.ts
src/: battery.rs  main.rs  osc_sender.rs  ovr_install.rs  ovr_manifest.rs  run_watch.rs
src/ovr_manifest/: registration.rs
