[package]
name = "vrcwatch-rs"
version = "0.3.4"
edition = "2021"
publish = false
license = "MIT"
description = "A VRChat watch driver via OSC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.40"
futures-util = "0.3.31"
clap = { version = "4.5.36", features = ["derive"] }
moon-phase = "0.1.0"
rosc = "0.11.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26.2"
