[package]
name = "vrcwatch-rs"
version = "0.4.0"
edition = "2021"
publish = false
license = "MIT"
description = "A VRChat watch driver via OSC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
moon-phase = "0.1.0"
rosc = "0.11.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"